# portfolio-manager

./: .gitignore  README.md  init_db.py  package-lock.json  package.json  test.db
backend/: .env.example  Procfile  alembic.ini  pyproject.toml  pytest.ini  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cc4a45ccce8_migrate_transactions_to_decimal.py  22205aaa5668_backtesthistory.py  2bfba3bd0706_ohlc.py  6209ddfd9811_initial_migration.py  a8bb9c972163_add_transactions_relationship_to_user_.py  b71dbf93e944_watchlistalertpercentagechange.py  d5152c5e062f_enforcesinglepriceupdaterow.py  dc77f58ec078_priceupdatetable.py  de9557d03bd9_add_unique_constraint_to_watchlist.py  fa52323efba4_useremailtoname.py  fe3afd638f5d_add_transaction_model.py
backend/app/: config.py  database.py  logger.py  main.py  schemas.py
backend/app/api/: api.py
backend/app/backtesting/: actions.py  context.py  engine.py  metrics.py
backend/app/config/: auth.py  database.py  settings.py
backend/app/core/: __init__.py  asset.py  fetch_all.py  portfolio_engine.py  price_service.py  update_assets.py  update_timeseries.py
backend/app/crud/: __init__.py  asset.py  backtest.py  personal_best.py  timeseries.py  transaction.py  user.py  watchlist.py
backend/app/models/: __init__.py  asset.py  backtesthistory.py  monte_carlo.py  personal_best.py  portfolio.py  priceupdate.py  timeseries.py  transaction.py  user.py  watchlistitem.py
backend/app/monte_carlo/: benchmark_monte_carlo.py  monte_carlo_engine.py
backend/app/schemas/: __init__.py  asset.py  backtest.py  monte_carlo.py  personal_best.py  timeseries.py  transaction.py  user.py  watchlist.py
backend/app/scripts/: update_assets.py  update_timeseries.py
backend/app/services/: asset_service.py  backtest_service.py  portfolio_engine.py  price_service.py
backend/app/utils/: convert_to_utc.py
backend/tests/: conftest.py  test_dummy.py  test_integration.py  test_monte_carlo_statistical.py  test_portfolio.py  test_price_service.py  test_security.py
backend/tests/backtesting/: helpers.py  test_engine.py
portfolio-api/: alembic.ini  pyproject.toml
portfolio-api/alembic/: env.py
portfolio-api/alembic/versions/: 0b8940a6f2a8_initial.py  343b22b20f2a_initial_migration.py  c90f9e26ebf3_initial_migration.py
portfolio-api/app/: database.py  db_testing.py  get_data.py  main.py  security.py
portfolio-api/app/api/: api.py
portfolio-api/app/config/: database.py  settings.py
portfolio-api/app/core/: asset.py
portfolio-api/app/crud/: __init__.py  asset.py  timeseries.py  user.py  watchlist.py
portfolio-api/app/models/: __init__.py  asset.py  timeseries.py  user.py  watchlist.py  watchlistitem.py
portfolio-api/app/schemas/: __init__.py  asset.py  watchlist.py
portfolio-api/app/scripts/: fetch_all.py  (+2 more)
(+193 files in other folders)
