[project]
name = "portfolio-manager-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "cryptography>=44.0.0",
    "fastapi>=0.123.5",
    "matplotlib>=3.10.6",
    "openai>=2.12.0",
    "passlib[bcrypt]>=1.7.4",
    "polars>=1.20.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "scipy>=1.16.2",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "yfinance==0.2.58",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["."]
