[tool.poetry]
name = "portfolio manager backend"
version = "0.1.0"
description = ""
authors = ["Dom Parsons <puffins_fridge0d@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
